--- a/converter.ipynb
+++ b/converter.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7c95907e-cb25-4702-9674-27bb7d747713",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from typing import Literal"
+    "from typing import Literal\n",
+    "test"
    ]
   },
   {
