--- a/converter.ipynb
+++ b/converter.ipynb
@@ -8,8 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from typing import Literal\n",
-    "test"
+    "from typing import Literal"
    ]
   },
   {
