temp and cond works

--- a/converter.ipynb
+++ b/converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7c95907e-cb25-4702-9674-27bb7d747713",
    "metadata": {},
    "outputs": [],
@@ -298,11 +298,12 @@
     }
    ],
    "source": [
-    "temperature_counts_in1 = np.array(1000/(int(bytes_list[0],16)*256 + int(bytes_list[1],16) + int(bytes_list[2],16)/256))\n",
+    "F0 = 1000\n",
+    "temperature_counts_in1 = np.array(F0/(int(bytes_list[0],16)*256 + int(bytes_list[1],16) + int(bytes_list[2],16)/256))\n",
     "temperature1 = convert_temperature(temperature_counts_in1,coefs= temp1_coefs)\n",
     "print(\"Temp_1:\",temperature1)\n",
     "\n",
-    "temperature_counts_in2 = np.array(1000/(int(bytes_list[9],16)*256 + int(bytes_list[10],16) + int(bytes_list[11],16)/256))\n",
+    "temperature_counts_in2 = np.array(F0/(int(bytes_list[9],16)*256 + int(bytes_list[10],16) + int(bytes_list[11],16)/256))\n",
     "temperature2 = convert_temperature(temperature_counts_in2,coefs= temp2_coefs)\n",
     "print(\"Temp_2:\",temperature2)"
    ]
@@ -317,19 +318,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pressure: -42139.338897210626\n"
+      "80 45 8F\n",
+      "128 69 143\n",
+      "Pressure_count: 32837.55859375\n",
+      "Pressure: 14680245.402267372\n"
      ]
     }
    ],
    "source": [
-    "pressure_counts = np.array(1000/(int(bytes_list[6],16)*256 + int(bytes_list[7],16) + int(bytes_list[8],16)/256))\n",
+    "pressure_counts = np.array((int(bytes_list[6],16)*256 + int(bytes_list[7],16) + int(bytes_list[8],16)/256))\n",
+    "\n",
+    "print(bytes_list[6],bytes_list[7],bytes_list[8])\n",
+    "print((int(bytes_list[6],16)),(int(bytes_list[7],16)),(int(bytes_list[8],16)))\n",
+    "print(\"Pressure_count:\", pressure_counts)\n",
+    "\n",
     "pressure = convert_pressure(pressure_counts,np.array(0),coefs= pres_coefs)\n",
+    "\n",
+    "\n",
     "print(\"Pressure:\", pressure)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "543eea61-06ac-4ed2-bd3e-2bb935c066d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Goal:  1.149"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "19dd299e-3046-4a0d-acc3-df2d48bcd476",
    "metadata": {},
    "outputs": [
@@ -337,24 +358,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conductivity_1: -9.908934160276393\n",
-      "Conductivity_2: -9.73886122502201\n"
+      "Conductivity_1: 15.330789300015969\n",
+      "Conductivity_2: 15.32989468343113\n"
      ]
     }
    ],
    "source": [
-    "conductivity_count = np.array(1000/(int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
-    "conductifity1 = convert_conductivity(conductivity_count,temperature1,pressure,coefs= cond1_coefs)\n",
+    "pressure_test = 1.149\n",
+    "conductivity_count = np.array((int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
+    "conductifity1 = convert_conductivity(conductivity_count,temperature1,pressure_test,coefs= cond1_coefs)\n",
     "print(\"Conductivity_1:\", conductifity1)\n",
     "\n",
-    "conductivity_count = np.array(1000/(int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
-    "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure,coefs= cond2_coefs)\n",
+    "conductivity_count = np.array((int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
+    "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure_test,coefs= cond2_coefs)\n",
     "print(\"Conductivity_2:\", conductifity2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a92b5988-ed19-48ab-9e3e-2e7d109071c5",
    "metadata": {},
    "outputs": [
@@ -363,13 +385,21 @@
      "evalue": "invalid syntax (1743589002.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m1.149     3.5616     3.5610  15.330789  15.329895\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m1.149     3.5616     3.5610  15.330789  15.329895\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "1.149     3.5616     3.5610  15.330789  15.329895"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a39fd2cd-9670-4f09-bbe5-7cc6f993a93e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -388,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
