--- a/converter.ipynb
+++ b/converter.ipynb
@@ -113,7 +113,39 @@
     "    j: float\n",
     "    cpcor: float\n",
     "    ctcor: float\n",
-    "    wbotc: float"
+    "    wbotc: float\n",
+    "\n",
+    "class Oxygen43Coefficients:\n",
+    "    \"\"\"\n",
+    "    :param soc: linear scaling coefficient\n",
+    "    :param v_offset: voltage at zero oxygen signal\n",
+    "    :param tau_20: sensor time constant tau(T,P) at 20 C, 1 atmosphere, 0 PSU;\n",
+    "        slope term in calculation of tau(T,P)\n",
+    "    :param a: coefficient\n",
+    "    :param b: coefficient\n",
+    "    :param c: coefficient\n",
+    "    :param e: coefficient\n",
+    "    :param d0: tau(T,P) coefficient\n",
+    "    :param d1: tau(T,P) coefficient\n",
+    "    :param d2: tau(T,P) coefficient\n",
+    "    :param h1: hysteresis correction coefficient\n",
+    "    :param h2: hysteresis correction coefficient\n",
+    "    :param h3: hysteresis correction coefficient\n",
+    "    \"\"\"\n",
+    "\n",
+    "    soc: float\n",
+    "    v_offset: float\n",
+    "    tau_20: float\n",
+    "    a: float\n",
+    "    b: float\n",
+    "    c: float\n",
+    "    e: float\n",
+    "    d0: float  # TODO: the sensor lists a d0 coefficient, but it doesn't seem to be used?\n",
+    "    d1: float\n",
+    "    d2: float\n",
+    "    h1: float\n",
+    "    h2: float\n",
+    "    h3: float"
    ]
   },
   {
@@ -140,12 +172,15 @@
     "pres_coefs.pa0 = -4.212464e+004\n",
     "pres_coefs.pa1 = -1.972709e-001\n",
     "pres_coefs.pa2 = 1.365930e-002\n",
+    "\n",
     "pres_coefs.ptca0 = 3.604100e-002\n",
     "pres_coefs.ptca1 = 0.000000e+000\n",
     "pres_coefs.ptca2 = 3.046128e+001\n",
+    "\n",
     "pres_coefs.ptcb0 = -3.791930e-004\n",
     "pres_coefs.ptcb1 = 4.202260e-006\n",
     "pres_coefs.ptcb2 = 3.386190e-00\n",
+    "\n",
     "pres_coefs.ptempa0 = 0.000000e+000\n",
     "pres_coefs.ptempa1 = 1.279410e-002\n",
     "pres_coefs.ptempa2 = -9.215740e+000\n",
@@ -167,7 +202,23 @@
     "cond2_coefs.j = 6.59127902e-005\n",
     "cond2_coefs.cpcor = -9.57000000e-008\n",
     "cond2_coefs.ctcor = 3.2500e-006\n",
-    "cond2_coefs.wbotc = 0.00000000e+000"
+    "cond2_coefs.wbotc = 0.00000000e+000\n",
+    "\n",
+    "\n",
+    "oxy_coefs = Oxygen43Coefficients()\n",
+    "oxy_coefs.soc = 4.7612e-001\n",
+    "oxy_coefs.v_offset = -0.4891\n",
+    "oxy_coefs.tau_20 = 1.7400\n",
+    "oxy_coefs.a = -3.2939e-003\n",
+    "oxy_coefs.b = 1.4617e-004\n",
+    "oxy_coefs.c = -2.1408e-006\n",
+    "oxy_coefs.e = 3.6000e-002\n",
+    "oxy_coefs.d0 = 2.5826e+000\n",
+    "oxy_coefs.d1 = 1.92634e-004\n",
+    "oxy_coefs.d2 = -4.64803e-002\n",
+    "oxy_coefs.h1 = -3.3000e-002\n",
+    "oxy_coefs.h2 = 5.0000e+003\n",
+    "oxy_coefs.h3 = 1.4500e+003"
    ]
   },
   {
@@ -279,7 +330,83 @@
     "    f = conductivity_count * np.sqrt(1 + coefs.wbotc * temperature) / 1000\n",
     "    numerator = coefs.g + coefs.h * f**2 + coefs.i * f**3 + coefs.j * f**4\n",
     "    denominator = 1 + coefs.ctcor * temperature + coefs.cpcor * pressure\n",
-    "    return numerator / denominator"
+    "    return numerator / denominator\n",
+    "\n",
+    "\n",
+    "def convert_sbe43_oxygen(\n",
+    "    voltage: np.ndarray,\n",
+    "    temperature: np.ndarray,\n",
+    "    pressure: np.ndarray,\n",
+    "    salinity: np.ndarray,\n",
+    "    coefs: Oxygen43Coefficients,\n",
+    "    apply_tau_correction: bool = False,\n",
+    "    apply_hysteresis_correction: bool = False,\n",
+    "    window_size: float = 1,\n",
+    "    sample_interval: float = 1,\n",
+    "):\n",
+    "    \"\"\"Returns the data after converting it to ml/l.\n",
+    "\n",
+    "    voltage is expected to be in volts, temperature in deg c, pressure\n",
+    "    in dbar, and salinity in practical salinity (PSU). All equation\n",
+    "    information comes from the June 2013 revision of the SBE43 manual\n",
+    "\n",
+    "    :param voltage: SBE43 voltage\n",
+    "    :param temperature: temperature value converted to deg C\n",
+    "    :param pressure: Converted pressure value from the attached CTD, in\n",
+    "        dbar\n",
+    "    :param salinity: Converted salinity value from the attached CTD, in\n",
+    "        practical salinity PSU\n",
+    "    :param coefs: calibration coefficients for the SBE43 sensor\n",
+    "    :param apply_tau_correction: whether or not to run tau correction\n",
+    "    :param apply_hysteresis_correction: whether or not to run hysteresis\n",
+    "        correction\n",
+    "    :param window_size: size of the window to use for tau correction, if\n",
+    "        applicable, in seconds\n",
+    "    :param sample_interval: sample rate of the data to be used for tau\n",
+    "        correction, if applicable. In seconds.\n",
+    "\n",
+    "    :return: converted Oxygen values, in ml/l\n",
+    "    \"\"\"\n",
+    "    # start with all 0 for the dvdt\n",
+    "    dvdt_values = np.zeros(len(voltage))\n",
+    "    if apply_tau_correction:\n",
+    "        # Calculates how many scans to have on either side of our median\n",
+    "        # point, accounting for going out of index bounds\n",
+    "        scans_per_side = floor(window_size / 2 / sample_interval)\n",
+    "        for i in range(scans_per_side, len(voltage) - scans_per_side):\n",
+    "            ox_subset = voltage[i - scans_per_side : i + scans_per_side + 1]\n",
+    "\n",
+    "            time_subset = np.arange(\n",
+    "                0, len(ox_subset) * sample_interval, sample_interval, dtype=float\n",
+    "            )\n",
+    "\n",
+    "            result = stats.linregress(time_subset, ox_subset)\n",
+    "\n",
+    "            dvdt_values[i] = result.slope\n",
+    "\n",
+    "    correct_ox_voltages = voltage.copy()\n",
+    "    if apply_hysteresis_correction:\n",
+    "        # Hysteresis starts at 1 because 0 can't be corrected\n",
+    "        for i in range(1, len(correct_ox_voltages)):\n",
+    "            # All Equation info from APPLICATION NOTE NO. 64-3\n",
+    "            d = 1 + coefs.h1 * (np.exp(pressure[i] / coefs.h2) - 1)\n",
+    "            c = np.exp(-1 * sample_interval / coefs.h3)\n",
+    "            ox_volts = correct_ox_voltages[i] + coefs.v_offset\n",
+    "\n",
+    "            prev_ox_volts_new = correct_ox_voltages[i - 1] + coefs.v_offset\n",
+    "            ox_volts_new = ((ox_volts + prev_ox_volts_new * c * d) - (prev_ox_volts_new * c)) / d\n",
+    "            ox_volts_final = ox_volts_new - coefs.v_offset\n",
+    "            correct_ox_voltages[i] = ox_volts_final\n",
+    "\n",
+    "    oxygen = _convert_sbe43_oxygen(\n",
+    "        correct_ox_voltages,\n",
+    "        temperature,\n",
+    "        pressure,\n",
+    "        salinity,\n",
+    "        coefs,\n",
+    "        dvdt_values,\n",
+    "    )\n",
+    "    return oxygen"
    ]
   },
   {
@@ -293,7 +420,8 @@
      "output_type": "stream",
      "text": [
       "Temp_1: 3.561563969710619\n",
-      "Temp_2: 3.561044266345732\n"
+      "Temp_2: 3.561044266345732\n",
+      "3.5616   3.5610\n"
      ]
     }
    ],
@@ -305,12 +433,14 @@
     "\n",
     "temperature_counts_in2 = np.array(F0/(int(bytes_list[9],16)*256 + int(bytes_list[10],16) + int(bytes_list[11],16)/256))\n",
     "temperature2 = convert_temperature(temperature_counts_in2,coefs= temp2_coefs)\n",
-    "print(\"Temp_2:\",temperature2)"
+    "print(\"Temp_2:\",temperature2)\n",
+    "\n",
+    "print(\"3.5616   3.5610\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "887e0d15-8177-42d5-853e-f2232fb23af9",
    "metadata": {},
    "outputs": [
@@ -318,39 +448,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80 45 8F\n",
-      "128 69 143\n",
-      "Pressure_count: 32837.55859375\n",
-      "Pressure: 14680245.402267372\n"
+      "08 24 23\n",
+      "8 36 35\n",
+      "Pressure_count: 2084.13671875\n",
+      "Compensation_voltage: 1\n",
+      "Pressure: [-819.21523912]\n",
+      "1.149\n"
      ]
     }
    ],
    "source": [
     "pressure_counts = np.array((int(bytes_list[6],16)*256 + int(bytes_list[7],16) + int(bytes_list[8],16)/256))\n",
+    "compensation_voltage = np.array(1)\n",
     "\n",
     "print(bytes_list[6],bytes_list[7],bytes_list[8])\n",
     "print((int(bytes_list[6],16)),(int(bytes_list[7],16)),(int(bytes_list[8],16)))\n",
     "print(\"Pressure_count:\", pressure_counts)\n",
+    "print(\"Compensation_voltage:\", compensation_voltage)\n",
     "\n",
-    "pressure = convert_pressure(pressure_counts,np.array(0),coefs= pres_coefs)\n",
+    "\n",
+    "pressure = convert_pressure(pressure_counts,compensation_voltage,coefs= pres_coefs)\n",
     "\n",
     "\n",
-    "print(\"Pressure:\", pressure)"
+    "print(\"Pressure:\", pressure)\n",
+    "\n",
+    "print(\"1.149\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "543eea61-06ac-4ed2-bd3e-2bb935c066d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Goal:  1.149"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "19dd299e-3046-4a0d-acc3-df2d48bcd476",
    "metadata": {},
    "outputs": [
@@ -359,7 +486,8 @@
      "output_type": "stream",
      "text": [
       "Conductivity_1: 15.330789300015969\n",
-      "Conductivity_2: 15.32989468343113\n"
+      "Conductivity_2: 15.32989468343113\n",
+      "15.330789  15.329895\n"
      ]
     }
    ],
@@ -371,35 +499,97 @@
     "\n",
     "conductivity_count = np.array((int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
     "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure_test,coefs= cond2_coefs)\n",
-    "print(\"Conductivity_2:\", conductifity2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a92b5988-ed19-48ab-9e3e-2e7d109071c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1743589002.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m1.149     3.5616     3.5610  15.330789  15.329895\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "1.149     3.5616     3.5610  15.330789  15.329895"
+    "print(\"Conductivity_2:\", conductifity2)\n",
+    "print(\"15.330789  15.329895\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39fd2cd-9670-4f09-bbe5-7cc6f993a93e",
+   "id": "2bb8ef2f-f1b5-4b48-8baf-3c1420a596c2",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795263b4-a5c6-43fc-992b-1147867595f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5011169f-b589-4ef2-bd61-f1b84eeb822f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hex_string = \"04ECEE0A4E570824235091061C3C390A9AAE14\"\n",
+    "bytes_list = [hex_string[i:i+2] for i in range(0, len(hex_string), 2)]\n",
+    "\n",
+    "pres_coefs = PressureCoefficients()\n",
+    "pres_coefs.pa0=6.51546669e-002\n",
+    "pres_coefs.pa1=1.54424116e-003\n",
+    "pres_coefs.pa2=6.13653149e-012\n",
+    "\n",
+    "pres_coefs.ptca0=5.24108391e005\n",
+    "pres_coefs.ptca1=5.47371611e000\n",
+    "pres_coefs.ptca2=-1.53365246e-001\n",
+    "\n",
+    "pres_coefs.ptcb0=2.59008750e001\n",
+    "pres_coefs.ptcb1=7.75000000e-004\n",
+    "pres_coefs.ptcb2=0.00000000e000\n",
+    "\n",
+    "pres_coefs.ptempa0=-6.28624239e001\n",
+    "pres_coefs.ptempa1=5.41620689e001\n",
+    "pres_coefs.ptempa2=-2.96026659e-001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "60e345fb-fa07-4a2e-9861-5a33468f7af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "08 24 23\n",
+      "8 36 35\n",
+      "Pressure_count: 2084.13671875\n",
+      "Compensation_voltage: 48.9\n",
+      "Pressure: -2.2302049462139983\n"
+     ]
+    }
+   ],
+   "source": [
+    "pressure_counts = np.array((int(bytes_list[6],16)*256 + int(bytes_list[7],16) + int(bytes_list[8],16)/256))\n",
+    "compensation_voltage = np.array()\n",
+    "\n",
+    "print(bytes_list[6],bytes_list[7],bytes_list[8])\n",
+    "print((int(bytes_list[6],16)),(int(bytes_list[7],16)),(int(bytes_list[8],16)))\n",
+    "print(\"Pressure_count:\", pressure_counts)\n",
+    "print(\"Compensation_voltage:\", compensation_voltage)\n",
+    "\n",
+    "\n",
+    "pressure = convert_pressure(pressure_counts,compensation_voltage,coefs= pres_coefs)\n",
+    "\n",
+    "\n",
+    "print(\"Pressure:\", pressure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78432912-3b41-40f2-a9be-963471f1a476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "-0.105 "
+   ]
   }
  ],
  "metadata": {
