--- a/converter.ipynb
+++ b/converter.ipynb
@@ -24,7 +24,7 @@
     "KELVIN_OFFSET_0C = 273.15\n",
     "KELVIN_OFFSET_25C = 298.15\n",
     "OXYGEN_MLPERL_TO_MGPERL = 1.42903\n",
-    "OXYGEN_MLPERL_TO_UMOLPERKG = 44660\n",
+    "OXYGEN_MLPERL_TO_UMOLPERKG = 44.660\n",
     "# taken from https://blog.seabird.com/ufaqs/what-is-the-difference-in-temperature-expressions-between-ipts-68-and-its-90/ # pylint: disable=line-too-long\n",
     "ITS90_TO_IPTS68 = 1.00024\n",
     "# micro moles of nitrate to milligrams of nitrogen per liter\n",
@@ -205,25 +205,59 @@
     "cond2_coefs.wbotc = 0.00000000e+000\n",
     "\n",
     "\n",
-    "oxy_coefs = Oxygen43Coefficients()\n",
-    "oxy_coefs.soc = 4.7612e-001\n",
-    "oxy_coefs.v_offset = -0.4891\n",
-    "oxy_coefs.tau_20 = 1.7400\n",
-    "oxy_coefs.a = -3.2939e-003\n",
-    "oxy_coefs.b = 1.4617e-004\n",
-    "oxy_coefs.c = -2.1408e-006\n",
-    "oxy_coefs.e = 3.6000e-002\n",
-    "oxy_coefs.d0 = 2.5826e+000\n",
-    "oxy_coefs.d1 = 1.92634e-004\n",
-    "oxy_coefs.d2 = -4.64803e-002\n",
-    "oxy_coefs.h1 = -3.3000e-002\n",
-    "oxy_coefs.h2 = 5.0000e+003\n",
-    "oxy_coefs.h3 = 1.4500e+003"
+    "oxy1_coefs = Oxygen43Coefficients()\n",
+    "oxy1_coefs.soc = 4.7612e-001\n",
+    "oxy1_coefs.v_offset = -0.4891\n",
+    "oxy1_coefs.tau_20 = 1.7400\n",
+    "oxy1_coefs.a = -3.2939e-003\n",
+    "oxy1_coefs.b = 1.4617e-004\n",
+    "oxy1_coefs.c = -2.1408e-006\n",
+    "oxy1_coefs.e = 3.6000e-002\n",
+    "oxy1_coefs.d0 = 2.5826e+000\n",
+    "oxy1_coefs.d1 = 1.92634e-004\n",
+    "oxy1_coefs.d2 = -4.64803e-002\n",
+    "oxy1_coefs.h1 = -3.3000e-002\n",
+    "oxy1_coefs.h2 = 5.0000e+003\n",
+    "oxy1_coefs.h3 = 1.4500e+003\n",
+    "\n",
+    "oxy2_coefs = Oxygen43Coefficients()\n",
+    "oxy2_coefs.soc = 5.4771e-001\n",
+    "oxy2_coefs.v_offset = -0.5020\n",
+    "oxy2_coefs.tau_20 = 1.2900\n",
+    "oxy2_coefs.a = -3.9126e-003\n",
+    "oxy2_coefs.b = 1.5415e-004\n",
+    "oxy2_coefs.c = -2.2575e-006\n",
+    "oxy2_coefs.e = 3.6000e-002\n",
+    "oxy2_coefs.d0 = 2.5826e+000\n",
+    "oxy2_coefs.d1 = 1.92634e-004\n",
+    "oxy2_coefs.d2 = -4.64803e-002\n",
+    "oxy2_coefs.h1 = -3.3000e-002\n",
+    "oxy2_coefs.h2 = 5.0000e+003\n",
+    "oxy2_coefs.h3 = 1.4500e+003"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6d464725-bbe6-4d08-9b14-e70275bea40c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hex_to_voltage(hex_value: str):\n",
+    "    clean_hex = hex_value.strip().upper()\n",
+    "    \n",
+    "    # Hex to Decimal\n",
+    "    N = int(clean_hex, 16)\n",
+    "\n",
+    "    # Convert to volt\n",
+    "    V = 5 * (1 - (N / 4095))\n",
+    "\n",
+    "    return V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "7dd2c272-0c03-4f3c-892b-3719f8717c90",
    "metadata": {},
    "outputs": [],
@@ -406,41 +440,140 @@
     "        coefs,\n",
     "        dvdt_values,\n",
     "    )\n",
-    "    return oxygen"
+    "    return oxygen\n",
+    "\n",
+    "def _convert_sbe43_oxygen(\n",
+    "    voltage: np.ndarray,\n",
+    "    temperature: np.ndarray,\n",
+    "    pressure: np.ndarray,\n",
+    "    salinity: np.ndarray,\n",
+    "    coefs: Oxygen43Coefficients,\n",
+    "    dvdt_value: np.ndarray,\n",
+    "):\n",
+    "    \"\"\"Returns the data after converting it to ml/l.\n",
+    "\n",
+    "    voltage is expected to be in volts, temperature in deg c, pressure\n",
+    "    in dbar, and salinity in practical salinity (PSU). All equation\n",
+    "    information comes from the June 2013 revision of the SBE43 manual.\n",
+    "    Expects that hysteresis correction is already performed on the\n",
+    "    incoming voltage, if desired.\n",
+    "\n",
+    "    :param voltage: SBE43 voltage\n",
+    "    :param temperature: temperature value converted to deg C\n",
+    "    :param pressure: Converted pressure value from the attached CTD, in\n",
+    "        dbar\n",
+    "    :param salinity: Converted salinity value from the attached CTD, in\n",
+    "        practical salinity PSU\n",
+    "    :param coefs: calibration coefficients for the SBE43 sensor\n",
+    "    :param dvdt_value: derivative value of voltage with respect to time\n",
+    "        at this point. Expected to be 0 if not using Tau correction\n",
+    "\n",
+    "    :return: converted Oxygen value, in ml/l\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Oxygen Solubility equation constants, From SBE43 Manual Appendix A\n",
+    "    a0 = 2.00907\n",
+    "    a1 = 3.22014\n",
+    "    a2 = 4.0501\n",
+    "    a3 = 4.94457\n",
+    "    a4 = -0.256847\n",
+    "    a5 = 3.88767\n",
+    "    b0 = -0.00624523\n",
+    "    b1 = -0.00737614\n",
+    "    b2 = -0.010341\n",
+    "    b3 = -0.00817083\n",
+    "    c0 = -0.000000488682\n",
+    "\n",
+    "    ts = np.log((KELVIN_OFFSET_25C - temperature) / (KELVIN_OFFSET_0C + temperature))\n",
+    "    a_term = a0 + a1 * ts + a2 * ts**2 + a3 * ts**3 + a4 * ts**4 + a5 * ts**5\n",
+    "    b_term = salinity * (b0 + b1 * ts + b2 * ts**2 + b3 * ts**3)\n",
+    "    c_term = c0 * salinity**2\n",
+    "    solubility = np.exp(a_term + b_term + c_term)\n",
+    "\n",
+    "    # Tau correction\n",
+    "    tau = coefs.tau_20 * np.exp(coefs.d1 * pressure + coefs.d2 * (temperature - 20)) * dvdt_value\n",
+    "\n",
+    "    soc_term = coefs.soc * (voltage + coefs.v_offset + tau)\n",
+    "    temp_term = 1.0 + coefs.a * temperature + coefs.b * temperature**2 + coefs.c * temperature**3\n",
+    "    oxygen = (\n",
+    "        soc_term\n",
+    "        * solubility\n",
+    "        * temp_term\n",
+    "        * np.exp((coefs.e * pressure) / (temperature + KELVIN_OFFSET_0C))\n",
+    "    )\n",
+    "    return oxygen\n",
+    "\n",
+    "def convert_oxygen_to_umol_per_kg(ox_values: np.ndarray, potential_density: np.ndarray):\n",
+    "    \"\"\"Converts given oxygen values to milligrams/kg.\n",
+    "\n",
+    "    Note: Sigma-Theta is expected to be calculated via gsw_sigma0,\n",
+    "    meaning is it technically potential density anomaly. Calculating\n",
+    "    using gsw_rho(SA, CT, p_ref = 0) results in actual potential\n",
+    "    density, but this function already does the converison, so values\n",
+    "    will need to have 1000 subtracted from them before being passed into\n",
+    "    this function. The function is done this way to stay matching to\n",
+    "    Application Note 64, but the results of either method are identical.\n",
+    "\n",
+    "    :param ox_values: oxygen values, already converted to ml/L\n",
+    "    :param potential_density: potential density (sigma-theta) values.\n",
+    "        Expected to be the same length as ox_values\n",
+    "\n",
+    "    :return: oxygen values converted to milligrams/Liter\n",
+    "    \"\"\"\n",
+    "\n",
+    "    oxygen_umolkg = (ox_values * OXYGEN_MLPERL_TO_UMOLPERKG) / (potential_density + 1000)\n",
+    "    return oxygen_umolkg\n",
+    "\n",
+    "def potential_density_from_t_s_p(\n",
+    "    temperature: np.ndarray,\n",
+    "    salinity: np.ndarray,\n",
+    "    pressure: np.ndarray,\n",
+    "    lon=0.0,\n",
+    "    lat=0.0,\n",
+    "    reference_pressure=0.0,\n",
+    "):\n",
+    "    \"\"\"Derive potential density from measured temperature, salinity, and\n",
+    "    pressure.\n",
+    "\n",
+    "    :param temperature: Measure temperature, in degrees C\n",
+    "    :param salinity: Measured salinity, in practical salinity units\n",
+    "    :param pressure: Measured pressure, in decibars\n",
+    "    :param lon: Longitude\n",
+    "    :param lat: Latitude\n",
+    "    :param reference_pressure: Reference pressure in decibars. Defaults\n",
+    "        to 0.0.\n",
+    "\n",
+    "    :return: Potential density in kg/m^3\n",
+    "    \"\"\"\n",
+    "\n",
+    "    absolute_salinity = gsw.SA_from_SP(salinity, pressure, lon, lat)\n",
+    "    conservative_temperature = gsw.CT_from_t(absolute_salinity, temperature, pressure)\n",
+    "    potential_density = (\n",
+    "        gsw.rho(absolute_salinity, conservative_temperature, reference_pressure) - 1000\n",
+    "    )\n",
+    "    return potential_density\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b8cd5401-6d3d-4ac4-8bcf-5262ec730f4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Temp_1: 3.561563969710619\n",
-      "Temp_2: 3.561044266345732\n",
-      "3.5616   3.5610\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "F0 = 1000\n",
     "temperature_counts_in1 = np.array(F0/(int(bytes_list[0],16)*256 + int(bytes_list[1],16) + int(bytes_list[2],16)/256))\n",
     "temperature1 = convert_temperature(temperature_counts_in1,coefs= temp1_coefs)\n",
-    "print(\"Temp_1:\",temperature1)\n",
+    "print(\"Temp_1:\",temperature1,\"°C\")\n",
     "\n",
     "temperature_counts_in2 = np.array(F0/(int(bytes_list[9],16)*256 + int(bytes_list[10],16) + int(bytes_list[11],16)/256))\n",
     "temperature2 = convert_temperature(temperature_counts_in2,coefs= temp2_coefs)\n",
-    "print(\"Temp_2:\",temperature2)\n",
-    "\n",
-    "print(\"3.5616   3.5610\")"
+    "print(\"Temp_2:\",temperature2,\"°C\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "887e0d15-8177-42d5-853e-f2232fb23af9",
    "metadata": {},
    "outputs": [
@@ -448,12 +581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "08 24 23\n",
-      "8 36 35\n",
-      "Pressure_count: 2084.13671875\n",
-      "Compensation_voltage: 1\n",
-      "Pressure: [-819.21523912]\n",
-      "1.149\n"
+      "80 45 8F\n",
+      "128 69 143\n"
      ]
     }
    ],
@@ -468,59 +597,165 @@
     "\n",
     "\n",
     "pressure = convert_pressure(pressure_counts,compensation_voltage,coefs= pres_coefs)\n",
-    "\n",
-    "\n",
-    "print(\"Pressure:\", pressure)\n",
-    "\n",
-    "print(\"1.149\")"
+    "print(\"Pressure:\", pressure,\"db\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "19dd299e-3046-4a0d-acc3-df2d48bcd476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pressure_test = 1.149\n",
+    "conductivity_count = np.array((int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
+    "conductifity1 = convert_conductivity(conductivity_count,temperature1,pressure_test,coefs= cond1_coefs)\n",
+    "print(\"Conductivity_1:\", conductifity1,\"mS/cm\")\n",
+    "\n",
+    "conductivity_count = np.array((int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
+    "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure_test,coefs= cond2_coefs)\n",
+    "print(\"Conductivity_2:\", conductifity2,\"mS/cm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e5f5b762-14d7-4a9d-b33e-7f7daeafb86f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gsw  # TEOS-10 library\n",
+    "voltage1 = np.array([hex_to_voltage(hex_string[30:33])])\n",
+    "voltage2 = np.array([hex_to_voltage(hex_string[33:36])])\n",
+    "salinity1 = np.array(gsw.SP_from_C(conductifity1, temperature1, pressure_test))\n",
+    "salinity2 = np.array(gsw.SP_from_C(conductifity2, temperature2, pressure_test))\n",
+    "\n",
+    "\n",
+    "oxygen1 = convert_sbe43_oxygen(voltage1,temperature1,pressure_test,salinity1,coefs= oxy1_coefs)\n",
+    "oxygen2 = convert_sbe43_oxygen(voltage2,temperature2,pressure_test,salinity2,coefs= oxy2_coefs)\n",
+    "print(\"Oxygen1:\", oxygen1,\"ml/l\")\n",
+    "print(\"Oxygen2:\", oxygen2,\"ml/l\")\n",
+    "\n",
+    "\n",
+    "potential_density1 = potential_density_from_t_s_p(temperature1,salinity1,pressure_test)\n",
+    "potential_density2 = potential_density_from_t_s_p(temperature2,salinity2,pressure_test)\n",
+    "\n",
+    "oxygen3 = convert_oxygen_to_umol_per_kg(np.array(oxygen1), np.array(potential_density1)) *1000\n",
+    "oxygen4 = convert_oxygen_to_umol_per_kg(np.array(oxygen2), np.array(potential_density2)) *1000\n",
+    "print(\"Oxygen1:\", oxygen3,\"umol/kg\")\n",
+    "print(\"Oxygen2:\", oxygen4,\"umol/kg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2eb7335-a943-4505-ae8e-d0de56e2d40b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "502d51b4-1822-4026-9a83-9486a975ad33",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "illegal target for annotation (184172583.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mflECO-AFL: Fluorescence, WET Labs ECO-AFL/FL [mg/m^3]\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m illegal target for annotation\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd309af6-f473-416c-8127-eae690c883b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b618a5-bc0e-4b4b-9d65-92771d175c33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conductivity_1: 15.330789300015969\n",
-      "Conductivity_2: 15.32989468343113\n",
-      "15.330789  15.329895\n"
+      "Pressure: -42139.332086015915 db\n",
+      "Temp_1: 3.561563969710619 °C\n",
+      "Temp_2: 3.561044266345732 °C\n",
+      "Conductivity_1: 15.330789300015969 mS/cm\n",
+      "Conductivity_2: 15.32989468343113 mS/cm\n",
+      "Oxygen1: [8.12350182] ml/l\n",
+      "Oxygen2: [8.12986258] ml/l\n",
+      "Oxygen1: [358.3635196] umol/kg\n",
+      "Oxygen2: [358.64431987] umol/kg\n",
+      "Salinity1: 15.5521222127295 PSU\n",
+      "Salinity2: 15.551386401977785 PSU\n"
      ]
     }
    ],
    "source": [
-    "pressure_test = 1.149\n",
-    "conductivity_count = np.array((int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
-    "conductifity1 = convert_conductivity(conductivity_count,temperature1,pressure_test,coefs= cond1_coefs)\n",
-    "print(\"Conductivity_1:\", conductifity1)\n",
-    "\n",
-    "conductivity_count = np.array((int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
-    "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure_test,coefs= cond2_coefs)\n",
-    "print(\"Conductivity_2:\", conductifity2)\n",
-    "print(\"15.330789  15.329895\")"
+    "print(\"Pressure:\", pressure,\"db\")\n",
+    "print(\"Temp_1:\",temperature1,\"°C\")\n",
+    "print(\"Temp_2:\",temperature2,\"°C\")\n",
+    "print(\"Conductivity_1:\", conductifity1,\"mS/cm\")\n",
+    "print(\"Conductivity_2:\", conductifity2,\"mS/cm\")\n",
+    "print(\"Oxygen1:\", oxygen1,\"ml/l\")\n",
+    "print(\"Oxygen2:\", oxygen2,\"ml/l\")\n",
+    "print(\"Oxygen1:\", oxygen3,\"umol/kg\")\n",
+    "print(\"Oxygen2:\", oxygen4,\"umol/kg\")\n",
+    "print(\"Salinity1:\", salinity1,\"PSU\")\n",
+    "print(\"Salinity2:\", salinity2,\"PSU\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f5b762-14d7-4a9d-b33e-7f7daeafb86f",
+   "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pressure_test = 1.149\n",
+    "name 0 = Pressure: -42139.332086015915 db         --> Falsch\n",
+    "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
+    "name 2 = Temp_2: 3.561044266345732 °C                     --> Richtig\n",
+    "name 3 = Conductivity_1: 15.330789300015969 mS/cm         --> Richtig\n",
+    "name 4 = Conductivity_2: 15.32989468343113 mS/cm          --> Richtig\n",
+    "name 5 = Oxygen1: [8.12350182] ml/l                       --> Richtig\n",
+    "name 6 = Oxygen2: [8.12986258] ml/l                       --> Richtig\n",
+    "name 7 = Oxygen1: [358.3635196] umol/kg                   --> Richtig\n",
+    "name 8 = Oxygen2: [358.64431987] umol/kg                  --> Richtig\n",
     "\n",
-    "voltage =\n",
-    "temperature =\n",
-    "pressure =\n",
-    "salinity =\n",
+    "name 9 = flECO-AFL: Fluorescence, WET Labs ECO-AFL/FL [mg/m^3]\n",
+    "name 10 = turbWETntu0: Turbidity, WET Labs ECO [NTU]\n",
+    "name 11 = par: PAR/Irradiance, Biospherical/Licor\n",
+    "name 12 = spar: SPAR, Biospherical/Licor\n",
+    "name 13 = timeS: Time, Elapsed [seconds]\n",
+    "name 14 = dz/dtM: Descent Rate [m/s]\n",
+    "\n",
+    "name 15 = Salinity1: 15.5521222127295 PSU                 --> Richtig        \n",
+    "name 16 = Salinity2: 15.551386401977785 PSU               --> Richtig\n",
+    "name 17 = flag:  0.000e+00                                --> ???\n",
     "\n",
     "\n",
-    "oxygen = convert_sbe43_oxygen(voltage,temperature,pressure,salinity,coefs= oxy_coefs)\n",
     "\n",
-    "print(\"Oxygen\", oxygen)"
+    "\n"
    ]
   }
  ],
@@ -540,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
