--- a/converter.ipynb
+++ b/converter.ipynb
@@ -551,7 +551,35 @@
     "    potential_density = (\n",
     "        gsw.rho(absolute_salinity, conservative_temperature, reference_pressure) - 1000\n",
     "    )\n",
-    "    return potential_density\n"
+    "    return potential_density\n",
+    "\n",
+    "def depth_from_pressure(\n",
+    "    pressure_in: np.ndarray,\n",
+    "    latitude: float,\n",
+    "    depth_units: Literal[\"m\", \"ft\"] = \"m\",\n",
+    "    pressure_units: Literal[\"dbar\", \"psi\"] = \"dbar\",\n",
+    "):\n",
+    "    \"\"\"Derive depth from pressure and latitude.\n",
+    "\n",
+    "    :param pressure: Numpy array of floats representing pressure, in\n",
+    "        dbar or psi\n",
+    "    :param latitude: Latitude (-90.0 to 90.0)\n",
+    "    :param depth_units: 'm' for meters, 'ft' for feet. Defaults to 'm'.\n",
+    "    :param pressure_units: 'dbar' for decibars, 'psi' for PSI. Defaults\n",
+    "        to 'dbar'.\n",
+    "\n",
+    "    :return: A numpy array representing depth in meters or feet\n",
+    "    \"\"\"\n",
+    "    pressure = pressure_in.copy()\n",
+    "    if pressure_units == \"psi\":\n",
+    "        pressure /= DBAR_TO_PSI\n",
+    "\n",
+    "    depth = -gsw.z_from_p(pressure, latitude)\n",
+    "\n",
+    "    if depth_units == \"ft\":\n",
+    "        depth *= 3.28084\n",
+    "\n",
+    "    return depth\n"
    ]
   },
   {
@@ -559,7 +587,16 @@
    "execution_count": 8,
    "id": "b8cd5401-6d3d-4ac4-8bcf-5262ec730f4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temp_1: 3.561563969710619 °C\n",
+      "Temp_2: 3.561044266345732 °C\n"
+     ]
+    }
+   ],
    "source": [
     "F0 = 1000\n",
     "temperature_counts_in1 = np.array(F0/(int(bytes_list[0],16)*256 + int(bytes_list[1],16) + int(bytes_list[2],16)/256))\n",
@@ -582,7 +619,10 @@
      "output_type": "stream",
      "text": [
       "80 45 8F\n",
-      "128 69 143\n"
+      "128 69 143\n",
+      "Pressure_count: 32837.55859375\n",
+      "Compensation_voltage: 1\n",
+      "Pressure: -42139.332086015915 db\n"
      ]
     }
    ],
@@ -605,7 +645,16 @@
    "execution_count": 10,
    "id": "19dd299e-3046-4a0d-acc3-df2d48bcd476",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conductivity_1: 15.330789300015969 mS/cm\n",
+      "Conductivity_2: 15.32989468343113 mS/cm\n"
+     ]
+    }
+   ],
    "source": [
     "pressure_test = 1.149\n",
     "conductivity_count = np.array((int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
@@ -622,7 +671,18 @@
    "execution_count": 11,
    "id": "e5f5b762-14d7-4a9d-b33e-7f7daeafb86f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oxygen1: [8.12350182] ml/l\n",
+      "Oxygen2: [8.12986258] ml/l\n",
+      "Oxygen1: [358.3635196] umol/kg\n",
+      "Oxygen2: [358.64431987] umol/kg\n"
+     ]
+    }
+   ],
    "source": [
     "import gsw  # TEOS-10 library\n",
     "voltage1 = np.array([hex_to_voltage(hex_string[30:33])])\n",
@@ -656,20 +716,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "502d51b4-1822-4026-9a83-9486a975ad33",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "illegal target for annotation (184172583.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mflECO-AFL: Fluorescence, WET Labs ECO-AFL/FL [mg/m^3]\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m illegal target for annotation\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Depth:  1.1387250606058024\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "deg = 54\n",
+    "minutes = 9.31\n",
+    "latitude = deg + minutes / 60\n",
+    "\n",
+    "depth = depth_from_pressure(np.array(pressure_test),latitude)\n",
+    "print(\"Depth: \",depth)"
+   ]
   },
   {
    "cell_type": "code",
@@ -689,28 +755,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pressure: -42139.332086015915 db\n",
-      "Temp_1: 3.561563969710619 °C\n",
-      "Temp_2: 3.561044266345732 °C\n",
-      "Conductivity_1: 15.330789300015969 mS/cm\n",
-      "Conductivity_2: 15.32989468343113 mS/cm\n",
-      "Oxygen1: [8.12350182] ml/l\n",
-      "Oxygen2: [8.12986258] ml/l\n",
-      "Oxygen1: [358.3635196] umol/kg\n",
-      "Oxygen2: [358.64431987] umol/kg\n",
-      "Salinity1: 15.5521222127295 PSU\n",
-      "Salinity2: 15.551386401977785 PSU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Pressure:\", pressure,\"db\")\n",
     "print(\"Temp_1:\",temperature1,\"°C\")\n",
