--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import numpy as np\n",
     "from typing import Literal, List\n",
-    "import gsw"
+    "import gsw   # for salinity"
    ]
   },
   {
