--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -289,7 +289,7 @@
     "    \"0CD08110767980459D0CCA6F1107B07D48A398DC41F13ECEFFFFBD0000BB29512A089DB7004D63975D91C465\"\n",
     "]\n",
     "bytes_list_array = [[hex_string[i:i+2] for i in range(0, len(hex_string), 2)] for hex_string in hexstrings]\n",
-    "pressure_test_array = [1.149,1.197,1.197,1.149,1.253,1.197,1.197,1.149,1.197,1.246]\n",
+    "pressure_test_array = np.array([1.149,1.197,1.197,1.149,1.253,1.197,1.197,1.149,1.197,1.246])\n",
     "\n",
     "hex_string = \"0CD08410767B80458F0CCA6F1107AE7D58A3987C41F0DEF2FFFFBE0000BB29512A089DB7004D638E5C91C465\"\n",
     "bytes_list = [hex_string[i:i+2] for i in range(0, len(hex_string), 2)]"
@@ -657,28 +657,51 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b8cd5401-6d3d-4ac4-8bcf-5262ec730f4f",
+   "id": "6f69e4d0-c73c-4a83-b665-07108197a107",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temp_1: 3.561563969710619 °C\n",
-      "Temp_2: 3.561044266345732 °C\n"
+      "Temperatures1: [3.56156397 3.56140342 3.56172452 3.56172452 3.56188507 3.56156397\n",
+      " 3.56140342 3.56156397 3.56172452 3.56140342]\n",
+      "Temperatures2: [3.56104427 3.56104427 3.56093531 3.56088084 3.56104427 3.56088084\n",
+      " 3.56077188 3.56077188 3.56104427 3.56104427]\n"
      ]
     }
    ],
    "source": [
     "F0 = 1000\n",
-    "temperature_counts_in1 = np.array(F0/(int(bytes_list[0],16)*256 + int(bytes_list[1],16) + int(bytes_list[2],16)/256))\n",
-    "temperature1 = convert_temperature(temperature_counts_in1,coefs= temp1_coefs)\n",
-    "print(\"Temp_1:\",temperature1,\"°C\")\n",
+    "temperature_counts1 = []\n",
+    "temperature_counts2 = []\n",
     "\n",
-    "temperature_counts_in2 = np.array(F0/(int(bytes_list[9],16)*256 + int(bytes_list[10],16) + int(bytes_list[11],16)/256))\n",
-    "temperature2 = convert_temperature(temperature_counts_in2,coefs= temp2_coefs)\n",
-    "print(\"Temp_2:\",temperature2,\"°C\")\n"
+    "for byte_list in bytes_list_array:\n",
+    "    count1 = int(byte_list[0], 16) * 256 + int(byte_list[1], 16) + int(byte_list[2], 16) / 256\n",
+    "    count2 = int(byte_list[9], 16) * 256 + int(byte_list[10], 16) + int(byte_list[11], 16) / 256\n",
+    "    temperature_counts1.append(count1)\n",
+    "    temperature_counts2.append(count2)\n",
+    "\n",
+    "temperature_counts1 = np.array(temperature_counts1)\n",
+    "temperature_counts2 = np.array(temperature_counts2)\n",
+    "\n",
+    "temperature_counts1 = F0 / temperature_counts1\n",
+    "temperature_counts2 = F0 / temperature_counts2\n",
+    "\n",
+    "temperatures1 = convert_temperature(temperature_counts1, coefs=temp1_coefs)\n",
+    "temperatures2 = convert_temperature(temperature_counts2, coefs=temp2_coefs)\n",
+    "\n",
+    "print(\"Temperatures1:\", temperatures1)\n",
+    "print(\"Temperatures2:\", temperatures2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8cd5401-6d3d-4ac4-8bcf-5262ec730f4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -715,32 +738,70 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "19dd299e-3046-4a0d-acc3-df2d48bcd476",
+   "id": "ddab0dd4-0d62-4d33-b942-3571b3b5b331",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conductivity_1: 15.330789300015969 mS/cm\n",
-      "Conductivity_2: 15.32989468343113 mS/cm\n"
+      "Conductifitys1: [15.3307893  15.33055485 15.33078936 15.33074239 15.3305549  15.33074246\n",
+      " 15.33069557 15.33083621 15.33074246 15.33069564]\n",
+      "Conductifitys2: [15.32989468 15.33007497 15.33002992 15.32989469 15.33007505 15.33002992\n",
+      " 15.33002993 15.3299848  15.33002991 15.32998493]\n"
      ]
     }
    ],
    "source": [
-    "pressure_test = 1.149\n",
-    "conductivity_count = np.array((int(bytes_list[3],16)*256 + int(bytes_list[4],16) + int(bytes_list[5],16)/256))\n",
-    "conductifity1 = convert_conductivity(conductivity_count,temperature1,pressure_test,coefs= cond1_coefs)\n",
-    "print(\"Conductivity_1:\", conductifity1,\"mS/cm\")\n",
+    "conductivity_counts1 = []\n",
+    "conductivity_counts2 = []\n",
     "\n",
-    "conductivity_count = np.array((int(bytes_list[12],16)*256 + int(bytes_list[13],16) + int(bytes_list[14],16)/256))\n",
-    "conductifity2 = convert_conductivity(conductivity_count,temperature2,pressure_test,coefs= cond2_coefs)\n",
-    "print(\"Conductivity_2:\", conductifity2,\"mS/cm\")"
+    "for byte_list in bytes_list_array:\n",
+    "    count1 = int(byte_list[3], 16) * 256 + int(byte_list[4], 16) + int(byte_list[5], 16) / 256\n",
+    "    count2 = int(byte_list[12], 16) * 256 + int(byte_list[13], 16) + int(byte_list[14], 16) / 256\n",
+    "    conductivity_counts1.append(count1)\n",
+    "    conductivity_counts2.append(count2)\n",
+    "\n",
+    "conductivity_counts1 = np.array(conductivity_counts1)\n",
+    "conductivity_counts2 = np.array(conductivity_counts2)\n",
+    "\n",
+    "conductifitys1 = convert_conductivity(conductivity_counts1, temperatures1, pressure_test_array, coefs=cond1_coefs)\n",
+    "conductifitys2 = convert_conductivity(conductivity_counts2, temperatures2, pressure_test_array, coefs=cond2_coefs)\n",
+    "\n",
+    "print(\"Conductifitys1:\", conductifitys1)\n",
+    "print(\"Conductifitys2:\", conductifitys2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "id": "828f3069-762b-43c2-8142-73bf1f582230",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salinity1: [15.55212221 15.55192789 15.55203225 15.5519937  15.55168197 15.55205751\n",
+      " 15.55208277 15.55217384 15.55198062 15.55206942] PSU\n",
+      "Salinity2: [15.5513864  15.55157168 15.55157426 15.55146467 15.55155642 15.55160035\n",
+      " 15.55165253 15.55161602 15.55152209 15.55145915] PSU\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gsw  # TEOS-10 library\n",
+    "\n",
+    "salinitys1 = gsw.SP_from_C(conductifitys1, temperatures1, pressure_test_array)\n",
+    "salinitys2 = gsw.SP_from_C(conductifitys2, temperatures2, pressure_test_array)\n",
+    "\n",
+    "print(\"Salinity1:\", salinitys1,\"PSU\")\n",
+    "print(\"Salinity2:\", salinitys2,\"PSU\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "e5f5b762-14d7-4a9d-b33e-7f7daeafb86f",
    "metadata": {},
    "outputs": [
@@ -748,34 +809,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Oxygen1: [8.12350182] ml/l\n",
-      "Oxygen2: [8.12986258] ml/l\n",
-      "Oxygen1: [358.3635196] umol/kg\n",
-      "Oxygen2: [358.64431987] umol/kg\n"
+      "Oxygens1: [8.12350182 8.12840815 8.12832951 8.12347245 8.12356307 8.12355611\n",
+      " 8.12359115 8.12830742 8.12833235 8.12845219] ml/l\n",
+      "Oxygens2: [8.12986258 8.12990316 8.12992827 8.12989616 8.12996323 8.12993947\n",
+      " 8.12444201 8.12991309 8.12438609 8.12996118] ml/l\n",
+      "Oxygens1: [358.3635196  358.58001181 358.57651809 358.36226265 358.36635012\n",
+      " 358.36593255 358.36746887 358.57550118 358.57665784 358.58191457] umol/kg\n",
+      "Oxygens2: [358.64431987 358.64605787 358.64716327 358.64577657 358.64871212\n",
+      " 358.64764884 358.40511542 358.64647918 358.40268922 358.64864886] umol/kg\n"
      ]
     }
    ],
    "source": [
-    "import gsw  # TEOS-10 library\n",
-    "voltage1 = np.array([hex_to_voltage(hex_string[30:33])])\n",
-    "voltage2 = np.array([hex_to_voltage(hex_string[33:36])])\n",
-    "salinity1 = np.array(gsw.SP_from_C(conductifity1, temperature1, pressure_test))\n",
-    "salinity2 = np.array(gsw.SP_from_C(conductifity2, temperature2, pressure_test))\n",
+    "voltages1 = []\n",
+    "voltages2 = []\n",
+    "\n",
+    "for hex_string in hexstrings:\n",
+    "    v1 = hex_to_voltage(hex_string[30:33])\n",
+    "    v2 = hex_to_voltage(hex_string[33:36])\n",
+    "    voltages1.append(v1)\n",
+    "    voltages2.append(v2)\n",
+    "\n",
+    "voltages1 = np.array(voltages1)\n",
+    "voltages2 = np.array(voltages2)\n",
+    "\n",
+    "oxygens1 = convert_sbe43_oxygen(voltages1,temperatures1,pressure_test_array,salinitys1,coefs= oxy1_coefs)\n",
+    "oxygens2 = convert_sbe43_oxygen(voltages2,temperatures2,pressure_test_array,salinitys2,coefs= oxy2_coefs)\n",
+    "print(\"Oxygens1:\", oxygens1,\"ml/l\")\n",
+    "print(\"Oxygens2:\", oxygens2,\"ml/l\")\n",
     "\n",
     "\n",
-    "oxygen1 = convert_sbe43_oxygen(voltage1,temperature1,pressure_test,salinity1,coefs= oxy1_coefs)\n",
-    "oxygen2 = convert_sbe43_oxygen(voltage2,temperature2,pressure_test,salinity2,coefs= oxy2_coefs)\n",
-    "print(\"Oxygen1:\", oxygen1,\"ml/l\")\n",
-    "print(\"Oxygen2:\", oxygen2,\"ml/l\")\n",
+    "potential_densitys1 = potential_density_from_t_s_p(temperatures1,salinitys1,pressure_test_array)\n",
+    "potential_densitys2 = potential_density_from_t_s_p(temperatures2,salinitys2,pressure_test_array)\n",
     "\n",
-    "\n",
-    "potential_density1 = potential_density_from_t_s_p(temperature1,salinity1,pressure_test)\n",
-    "potential_density2 = potential_density_from_t_s_p(temperature2,salinity2,pressure_test)\n",
-    "\n",
-    "oxygen3 = convert_oxygen_to_umol_per_kg(np.array(oxygen1), np.array(potential_density1)) *1000\n",
-    "oxygen4 = convert_oxygen_to_umol_per_kg(np.array(oxygen2), np.array(potential_density2)) *1000\n",
-    "print(\"Oxygen1:\", oxygen3,\"umol/kg\")\n",
-    "print(\"Oxygen2:\", oxygen4,\"umol/kg\")"
+    "oxygens3 = convert_oxygen_to_umol_per_kg(oxygens1, potential_densitys1) *1000\n",
+    "oxygens4 = convert_oxygen_to_umol_per_kg(oxygens2, potential_densitys2) *1000\n",
+    "print(\"Oxygens1:\", oxygens3,\"umol/kg\")\n",
+    "print(\"Oxygens2:\", oxygens4,\"umol/kg\")"
    ]
   },
   {
@@ -845,31 +915,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pressure: -42139.332086015915 db\n",
+      "Temperatures1: [3.56156397 3.56140342 3.56172452 3.56172452 3.56188507 3.56156397\n",
+      " 3.56140342 3.56156397 3.56172452 3.56140342] °C\n",
+      "\n",
+      "Temperatures2: [3.56104427 3.56104427 3.56093531 3.56088084 3.56104427 3.56088084\n",
+      " 3.56077188 3.56077188 3.56104427 3.56104427] °C\n",
+      "\n",
+      "Conductifitys1: [15.3307893  15.33055485 15.33078936 15.33074239 15.3305549  15.33074246\n",
+      " 15.33069557 15.33083621 15.33074246 15.33069564] mS/cm\n",
+      "\n",
+      "Conductifitys2: [15.32989468 15.33007497 15.33002992 15.32989469 15.33007505 15.33002992\n",
+      " 15.33002993 15.3299848  15.33002991 15.32998493] mS/cm\n",
+      "\n",
+      "Oxygens1: [8.12350182 8.12840815 8.12832951 8.12347245 8.12356307 8.12355611\n",
+      " 8.12359115 8.12830742 8.12833235 8.12845219] ml/l\n",
+      "\n",
+      "Oxygens2: [8.12986258 8.12990316 8.12992827 8.12989616 8.12996323 8.12993947\n",
+      " 8.12444201 8.12991309 8.12438609 8.12996118] ml/l\n",
+      "\n",
+      "Oxygens1: [358.3635196  358.58001181 358.57651809 358.36226265 358.36635012\n",
+      " 358.36593255 358.36746887 358.57550118 358.57665784 358.58191457] umol/kg\n",
+      "\n",
+      "Oxygens2: [358.64431987 358.64605787 358.64716327 358.64577657 358.64871212\n",
+      " 358.64764884 358.40511542 358.64647918 358.40268922 358.64864886] umol/kg\n",
+      "\n",
+      "Time_Elapsed: 0.000, 0.042, 0.083, 0.125, 0.167, 0.208, 0.250, 0.292, 0.333, 0.375 s\n",
+      "\n",
+      "Salinity1: [15.55212221 15.55192789 15.55203225 15.5519937  15.55168197 15.55205751\n",
+      " 15.55208277 15.55217384 15.55198062 15.55206942] PSU\n",
+      "\n",
+      "Salinity2: [15.5513864  15.55157168 15.55157426 15.55146467 15.55155642 15.55160035\n",
+      " 15.55165253 15.55161602 15.55152209 15.55145915] PSU\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Pressure:\", pressure,\"db\")\n",
-    "print(\"Temp_1:\",temperature1,\"°C\")\n",
-    "print(\"Temp_2:\",temperature2,\"°C\")\n",
-    "print(\"Conductivity_1:\", conductifity1,\"mS/cm\")\n",
-    "print(\"Conductivity_2:\", conductifity2,\"mS/cm\")\n",
-    "print(\"Oxygen1:\", oxygen1,\"ml/l\")\n",
-    "print(\"Oxygen2:\", oxygen2,\"ml/l\")\n",
-    "print(\"Oxygen1:\", oxygen3,\"umol/kg\")\n",
-    "print(\"Oxygen2:\", oxygen4,\"umol/kg\")\n",
-    "print(\"Time_Elapsed:\", ', '.join(f\"{time_elapsed:.3f}\" for time_elapsed in time_elapsed), \"s\")\n",
-    "print(\"Salinity1:\", salinity1,\"PSU\")\n",
-    "print(\"Salinity2:\", salinity2,\"PSU\")"
+    "print(\"Temperatures1:\", temperatures1,\"°C\\n\")\n",
+    "print(\"Temperatures2:\", temperatures2,\"°C\\n\")\n",
+    "print(\"Conductifitys1:\", conductifitys1,\"mS/cm\\n\")\n",
+    "print(\"Conductifitys2:\", conductifitys2,\"mS/cm\\n\")\n",
+    "\n",
+    "print(\"Oxygens1:\", oxygens1,\"ml/l\\n\")\n",
+    "print(\"Oxygens2:\", oxygens2,\"ml/l\\n\")\n",
+    "print(\"Oxygens1:\", oxygens3,\"umol/kg\\n\")\n",
+    "print(\"Oxygens2:\", oxygens4,\"umol/kg\\n\")\n",
+    "\n",
+    "print(\"Time_Elapsed:\", ', '.join(f\"{time_elapsed:.3f}\" for time_elapsed in time_elapsed), \"s\\n\")\n",
+    "\n",
+    "print(\"Salinity1:\", salinitys1,\"PSU\\n\")\n",
+    "print(\"Salinity2:\", salinitys2,\"PSU\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '°' (U+00B0) (803144344.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
+     ]
+    }
+   ],
    "source": [
     "name 0 = Pressure: -42139.332086015915 db                        --> Falsch\n",
     "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
@@ -930,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
